--- a/SurveyEducation/SurveyEducation.csproj
+++ b/SurveyEducation/SurveyEducation.csproj
@@ -159,9 +159,10 @@
     <Compile Include="Areas\Admin\Controllers\DashboardController.cs" />
     <Compile Include="Areas\Admin\Controllers\SurveyController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Migrations\202204270015230_InitialDB.cs" />
-    <Compile Include="Migrations\202204270015230_InitialDB.Designer.cs">
-      <DependentUpon>202204270015230_InitialDB.cs</DependentUpon>
+    <Compile Include="Controllers\AnswerController.cs" />
+    <Compile Include="Migrations\202204280451504_InitData.cs" />
+    <Compile Include="Migrations\202204280451504_InitData.Designer.cs">
+      <DependentUpon>202204280451504_InitData.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
@@ -175,7 +176,6 @@
     <Compile Include="ViewModels\SurveyHistoryViewModel.cs" />
     <Compile Include="ViewModels\SurveyViewModel.cs" />
     <Content Include="Areas\Admin\Views\Survey\AddSurvey.cshtml" />
-    <Compile Include="Areas\User\UserAreaRegistration.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Data\MyDbContext.cs" />
     <Compile Include="Global.asax.cs">
@@ -277,6 +277,183 @@
     <Content Include="bin\System.Web.WebPages.Razor.xml" />
     <Content Include="bin\System.Web.WebPages.xml" />
     <Content Include="bin\WebGrease.dll" />
+    <Content Include="Content\Admin\detail_servey.js" />
+    <Content Include="Content\Admin\detail_survey.js" />
+    <Content Include="Content\User\detail_survey.js" />
+    <Content Include="Public\css\style.css" />
+    <Content Include="Public\images\about\about.jpg" />
+    <Content Include="Public\images\about\bg-1.jpg" />
+    <Content Include="Public\images\about\Chinh.jpg" />
+    <Content Include="Public\images\about\Hieu.jpg" />
+    <Content Include="Public\images\about\Hieu1.jpg" />
+    <Content Include="Public\images\about\Hieu2.jpg" />
+    <Content Include="Public\images\about\Hieu3.jpg" />
+    <Content Include="Public\images\about\home-7.jpg" />
+    <Content Include="Public\images\about\home-8.jpg" />
+    <Content Include="Public\images\about\Quan.jpg" />
+    <Content Include="Public\images\about\Linh.jpg" />
+    <Content Include="Public\images\about\Quynh.jpg" />
+    <Content Include="Public\images\about\TuanAnh.jpg" />
+    <Content Include="Public\images\bg\counter.jpg" />
+    <Content Include="Public\images\bg\home-1.jpg" />
+    <Content Include="Public\images\bg\home-2.jpg" />
+    <Content Include="Public\images\bg\home-3.jpg" />
+    <Content Include="Public\images\bg\home-5.jpg" />
+    <Content Include="Public\images\bg\home-6.jpg" />
+    <Content Include="Public\images\bg\home-7.jpg" />
+    <Content Include="Public\images\bg\home-8.jpg" />
+    <Content Include="Public\images\blog\1.jpg" />
+    <Content Include="Public\images\blog\2.jpg" />
+    <Content Include="Public\images\blog\3.jpg" />
+    <Content Include="Public\images\blog\4.jpg" />
+    <Content Include="Public\images\blog\blog-author.jpg" />
+    <Content Include="Public\images\blog\bt-1.jpg" />
+    <Content Include="Public\images\blog\bt-2.jpg" />
+    <Content Include="Public\images\blog\bt-3.jpg" />
+    <Content Include="Public\images\blog\test1.jpg" />
+    <Content Include="Public\images\blog\test2.jpg" />
+    <Content Include="Public\images\logo.png" />
+    <Content Include="Public\images\portfolio\1.jpg" />
+    <Content Include="Public\images\portfolio\2.jpg" />
+    <Content Include="Public\images\portfolio\3.jpg" />
+    <Content Include="Public\images\portfolio\4.jpg" />
+    <Content Include="Public\images\portfolio\5.jpg" />
+    <Content Include="Public\images\portfolio\6.jpg" />
+    <Content Include="Public\images\team\team-1.jpg" />
+    <Content Include="Public\images\team\team-2.jpg" />
+    <Content Include="Public\images\team\team-3.jpg" />
+    <Content Include="Public\images\team\team-4.jpg" />
+    <Content Include="Public\images\team\team-5.jpg" />
+    <Content Include="Public\images\team\team-6.jpg" />
+    <Content Include="Public\js\contact.js" />
+    <Content Include="Public\js\script.js" />
+    <Content Include="Public\plugins\animate-css\animate.css" />
+    <Content Include="Public\plugins\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Public\plugins\bootstrap\js\bootstrap.js" />
+    <Content Include="Public\plugins\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Public\plugins\bootstrap\js\popper.js" />
+    <Content Include="Public\plugins\counterup\jquery.counterup.min.js" />
+    <Content Include="Public\plugins\counterup\jquery.waypoints.min.js" />
+    <Content Include="Public\plugins\fontawesome\css\all.css" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-brands-400.svg" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-regular-400.svg" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-solid-900.svg" />
+    <Content Include="Public\plugins\google-map\map.js" />
+    <Content Include="Public\plugins\jquery\external\sizzle\LICENSE.txt" />
+    <Content Include="Public\plugins\jquery\jquery.js" />
+    <Content Include="Public\plugins\jquery\src\ajax.js" />
+    <Content Include="Public\plugins\jquery\src\ajax\jsonp.js" />
+    <Content Include="Public\plugins\jquery\src\ajax\load.js" />
+    <Content Include="Public\plugins\jquery\src\ajax\parseXML.js" />
+    <Content Include="Public\plugins\jquery\src\ajax\script.js" />
+    <Content Include="Public\plugins\jquery\src\ajax\var\location.js" />
+    <Content Include="Public\plugins\jquery\src\ajax\var\nonce.js" />
+    <Content Include="Public\plugins\jquery\src\ajax\var\rquery.js" />
+    <Content Include="Public\plugins\jquery\src\ajax\xhr.js" />
+    <Content Include="Public\plugins\jquery\src\attributes.js" />
+    <Content Include="Public\plugins\jquery\src\attributes\attr.js" />
+    <Content Include="Public\plugins\jquery\src\attributes\classes.js" />
+    <Content Include="Public\plugins\jquery\src\attributes\prop.js" />
+    <Content Include="Public\plugins\jquery\src\attributes\support.js" />
+    <Content Include="Public\plugins\jquery\src\attributes\val.js" />
+    <Content Include="Public\plugins\jquery\src\callbacks.js" />
+    <Content Include="Public\plugins\jquery\src\core.js" />
+    <Content Include="Public\plugins\jquery\src\core\access.js" />
+    <Content Include="Public\plugins\jquery\src\core\DOMEval.js" />
+    <Content Include="Public\plugins\jquery\src\core\init.js" />
+    <Content Include="Public\plugins\jquery\src\core\nodeName.js" />
+    <Content Include="Public\plugins\jquery\src\core\parseHTML.js" />
+    <Content Include="Public\plugins\jquery\src\core\ready-no-deferred.js" />
+    <Content Include="Public\plugins\jquery\src\core\ready.js" />
+    <Content Include="Public\plugins\jquery\src\core\readyException.js" />
+    <Content Include="Public\plugins\jquery\src\core\stripAndCollapse.js" />
+    <Content Include="Public\plugins\jquery\src\core\support.js" />
+    <Content Include="Public\plugins\jquery\src\core\var\rsingleTag.js" />
+    <Content Include="Public\plugins\jquery\src\css.js" />
+    <Content Include="Public\plugins\jquery\src\css\addGetHookIf.js" />
+    <Content Include="Public\plugins\jquery\src\css\adjustCSS.js" />
+    <Content Include="Public\plugins\jquery\src\css\curCSS.js" />
+    <Content Include="Public\plugins\jquery\src\css\hiddenVisibleSelectors.js" />
+    <Content Include="Public\plugins\jquery\src\css\showHide.js" />
+    <Content Include="Public\plugins\jquery\src\css\support.js" />
+    <Content Include="Public\plugins\jquery\src\css\var\cssExpand.js" />
+    <Content Include="Public\plugins\jquery\src\css\var\getStyles.js" />
+    <Content Include="Public\plugins\jquery\src\css\var\isHiddenWithinTree.js" />
+    <Content Include="Public\plugins\jquery\src\css\var\rmargin.js" />
+    <Content Include="Public\plugins\jquery\src\css\var\rnumnonpx.js" />
+    <Content Include="Public\plugins\jquery\src\css\var\swap.js" />
+    <Content Include="Public\plugins\jquery\src\data.js" />
+    <Content Include="Public\plugins\jquery\src\data\Data.js" />
+    <Content Include="Public\plugins\jquery\src\data\var\acceptData.js" />
+    <Content Include="Public\plugins\jquery\src\data\var\dataPriv.js" />
+    <Content Include="Public\plugins\jquery\src\data\var\dataUser.js" />
+    <Content Include="Public\plugins\jquery\src\deferred.js" />
+    <Content Include="Public\plugins\jquery\src\deferred\exceptionHook.js" />
+    <Content Include="Public\plugins\jquery\src\deprecated.js" />
+    <Content Include="Public\plugins\jquery\src\dimensions.js" />
+    <Content Include="Public\plugins\jquery\src\effects.js" />
+    <Content Include="Public\plugins\jquery\src\effects\animatedSelector.js" />
+    <Content Include="Public\plugins\jquery\src\effects\Tween.js" />
+    <Content Include="Public\plugins\jquery\src\event.js" />
+    <Content Include="Public\plugins\jquery\src\event\ajax.js" />
+    <Content Include="Public\plugins\jquery\src\event\alias.js" />
+    <Content Include="Public\plugins\jquery\src\event\focusin.js" />
+    <Content Include="Public\plugins\jquery\src\event\support.js" />
+    <Content Include="Public\plugins\jquery\src\event\trigger.js" />
+    <Content Include="Public\plugins\jquery\src\exports\amd.js" />
+    <Content Include="Public\plugins\jquery\src\exports\global.js" />
+    <Content Include="Public\plugins\jquery\src\jquery.js" />
+    <Content Include="Public\plugins\jquery\src\manipulation.js" />
+    <Content Include="Public\plugins\jquery\src\manipulation\buildFragment.js" />
+    <Content Include="Public\plugins\jquery\src\manipulation\getAll.js" />
+    <Content Include="Public\plugins\jquery\src\manipulation\setGlobalEval.js" />
+    <Content Include="Public\plugins\jquery\src\manipulation\support.js" />
+    <Content Include="Public\plugins\jquery\src\manipulation\var\rcheckableType.js" />
+    <Content Include="Public\plugins\jquery\src\manipulation\var\rscriptType.js" />
+    <Content Include="Public\plugins\jquery\src\manipulation\var\rtagName.js" />
+    <Content Include="Public\plugins\jquery\src\manipulation\wrapMap.js" />
+    <Content Include="Public\plugins\jquery\src\manipulation\_evalUrl.js" />
+    <Content Include="Public\plugins\jquery\src\offset.js" />
+    <Content Include="Public\plugins\jquery\src\queue.js" />
+    <Content Include="Public\plugins\jquery\src\queue\delay.js" />
+    <Content Include="Public\plugins\jquery\src\selector-native.js" />
+    <Content Include="Public\plugins\jquery\src\selector-sizzle.js" />
+    <Content Include="Public\plugins\jquery\src\selector.js" />
+    <Content Include="Public\plugins\jquery\src\serialize.js" />
+    <Content Include="Public\plugins\jquery\src\traversing.js" />
+    <Content Include="Public\plugins\jquery\src\traversing\findFilter.js" />
+    <Content Include="Public\plugins\jquery\src\traversing\var\dir.js" />
+    <Content Include="Public\plugins\jquery\src\traversing\var\rneedsContext.js" />
+    <Content Include="Public\plugins\jquery\src\traversing\var\siblings.js" />
+    <Content Include="Public\plugins\jquery\src\var\arr.js" />
+    <Content Include="Public\plugins\jquery\src\var\class2type.js" />
+    <Content Include="Public\plugins\jquery\src\var\concat.js" />
+    <Content Include="Public\plugins\jquery\src\var\document.js" />
+    <Content Include="Public\plugins\jquery\src\var\documentElement.js" />
+    <Content Include="Public\plugins\jquery\src\var\fnToString.js" />
+    <Content Include="Public\plugins\jquery\src\var\getProto.js" />
+    <Content Include="Public\plugins\jquery\src\var\hasOwn.js" />
+    <Content Include="Public\plugins\jquery\src\var\indexOf.js" />
+    <Content Include="Public\plugins\jquery\src\var\ObjectFunctionString.js" />
+    <Content Include="Public\plugins\jquery\src\var\pnum.js" />
+    <Content Include="Public\plugins\jquery\src\var\push.js" />
+    <Content Include="Public\plugins\jquery\src\var\rcssNum.js" />
+    <Content Include="Public\plugins\jquery\src\var\rnothtmlwhite.js" />
+    <Content Include="Public\plugins\jquery\src\var\slice.js" />
+    <Content Include="Public\plugins\jquery\src\var\support.js" />
+    <Content Include="Public\plugins\jquery\src\var\toString.js" />
+    <Content Include="Public\plugins\jquery\src\wrap.js" />
+    <Content Include="Public\plugins\magnific-popup\dist\jquery.magnific-popup.js" />
+    <Content Include="Public\plugins\magnific-popup\dist\jquery.magnific-popup.min.js" />
+    <Content Include="Public\plugins\magnific-popup\dist\magnific-popup.css" />
+    <Content Include="Public\plugins\slick-carousel\slick\ajax-loader.gif" />
+    <Content Include="Public\plugins\slick-carousel\slick\fonts\slick.svg" />
+    <Content Include="Public\plugins\slick-carousel\slick\slick-theme.css" />
+    <Content Include="Public\plugins\slick-carousel\slick\slick.css" />
+    <Content Include="Public\plugins\slick-carousel\slick\slick.js" />
+    <Content Include="Public\plugins\slick-carousel\slick\slick.min.js" />
+    <Content Include="Public\plugins\themify\css\themify-icons.css" />
+    <Content Include="Public\plugins\themify\fonts\themify.svg" />
     <Content Include="Views\Account\Success.cshtml" />
     <Content Include="Views\Account\Fail.cshtml" />
     <Content Include="Views\Account\AddUser.cshtml" />
@@ -380,7 +557,6 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\Admin\Views\web.config" />
-    <Content Include="Areas\User\Views\web.config" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\Dashboard\Index.cshtml" />
     <Content Include="Areas\Admin\Public\assets\vendor\fonts\boxicons\boxicons.eot" />
@@ -493,10 +669,61 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="obj\Debug\SurveyEducation.csproj.AssemblyReference.cache" />
-    <Content Include="obj\Debug\SurveyEducation.csproj.CoreCompileInputs.cache" />
     <Content Include="Areas\Admin\Views\Survey\ShowSurvey.cshtml" />
     <Content Include="Areas\User\Views\DoSurvey\AddAnswer.cshtml" />
     <Content Include="Areas\Admin\Views\Survey\Details.cshtml" />
+    <Content Include="Public\css\maps\style.css.map" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-brands-400.eot" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-brands-400.ttf" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-brands-400.woff" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-brands-400.woff2" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-regular-400.eot" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-regular-400.ttf" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-regular-400.woff" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-regular-400.woff2" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-solid-900.eot" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-solid-900.ttf" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-solid-900.woff" />
+    <Content Include="Public\plugins\fontawesome\webfonts\fa-solid-900.woff2" />
+    <Content Include="Public\plugins\slick-carousel\slick\config.rb" />
+    <Content Include="Public\plugins\slick-carousel\slick\fonts\slick.eot" />
+    <Content Include="Public\plugins\slick-carousel\slick\fonts\slick.ttf" />
+    <Content Include="Public\plugins\slick-carousel\slick\fonts\slick.woff" />
+    <Content Include="Public\plugins\slick-carousel\slick\slick-theme.less" />
+    <Content Include="Public\plugins\slick-carousel\slick\slick-theme.scss" />
+    <Content Include="Public\plugins\slick-carousel\slick\slick.less" />
+    <Content Include="Public\plugins\slick-carousel\slick\slick.scss" />
+    <Content Include="Public\plugins\themify\fonts\themify.eot" />
+    <Content Include="Public\plugins\themify\fonts\themify.ttf" />
+    <Content Include="Public\plugins\themify\fonts\themify.woff" />
+    <Content Include="Public\scss\style.scss" />
+    <Content Include="Public\scss\templates\_about.scss" />
+    <Content Include="Public\scss\templates\_backgrounds.scss" />
+    <Content Include="Public\scss\templates\_blog-sidebar.scss" />
+    <Content Include="Public\scss\templates\_blog.scss" />
+    <Content Include="Public\scss\templates\_contact.scss" />
+    <Content Include="Public\scss\templates\_counter.scss" />
+    <Content Include="Public\scss\templates\_cta.scss" />
+    <Content Include="Public\scss\templates\_feature.scss" />
+    <Content Include="Public\scss\templates\_footer.scss" />
+    <Content Include="Public\scss\templates\_header.scss" />
+    <Content Include="Public\scss\templates\_intro.scss" />
+    <Content Include="Public\scss\templates\_navigation.scss" />
+    <Content Include="Public\scss\templates\_portfolio.scss" />
+    <Content Include="Public\scss\templates\_pricing.scss" />
+    <Content Include="Public\scss\templates\_responsive.scss" />
+    <Content Include="Public\scss\templates\_review.scss" />
+    <Content Include="Public\scss\templates\_service.scss" />
+    <Content Include="Public\scss\templates\_single-post.scss" />
+    <Content Include="Public\scss\templates\_slider.scss" />
+    <Content Include="Public\scss\templates\_team.scss" />
+    <Content Include="Public\scss\_color.scss" />
+    <Content Include="Public\scss\_common.scss" />
+    <Content Include="Public\scss\_main.scss" />
+    <Content Include="Public\scss\_media-query.scss" />
+    <Content Include="Public\scss\_mixins.scss" />
+    <Content Include="Public\scss\_typography.scss" />
+    <Content Include="Public\scss\_variables.scss" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -519,9 +746,16 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Answer\AddAnswer.cshtml" />
+    <Content Include="Views\Home\Details.cshtml" />
+    <Content Include="Views\Home\Survey.cshtml" />
+    <Content Include="Views\Shared\_Footer.cshtml" />
+    <Content Include="Views\Shared\_Head.cshtml" />
+    <Content Include="Views\Shared\_Header.cshtml" />
+    <Content Include="Views\Shared\_Script.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -544,8 +778,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202204270015230_InitialDB.resx">
-      <DependentUpon>202204270015230_InitialDB.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202204280451504_InitData.resx">
+      <DependentUpon>202204280451504_InitData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
